k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mbole-pay-app
  namespace: mbole-pay
spec:
  selector:
    app: mbole-pay-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
